--- a/3.html
+++ b/3.html
@@ -35,6 +35,53 @@
     이 코드는 버튼이 클릭될 때마다 "Hello, World!"라는 알림 창이 나타나도록 합니다. JavaScript는 웹 개발에서 필수적인 요소로 자리 잡고 있으며, 다양한 기능과 가능성을 제공하여 풍부한
     사용자 경험을 만들어냅니다.
     <img src="img.jpg" width="100%">
+    <p>
+    <div id="disqus_thread"></div>
+    <script>
+        /**
+        *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+        *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+        /*
+        var disqus_config = function () {
+        this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+        this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+        };
+        */
+        (function () { // DON'T EDIT BELOW THIS LINE
+            var d = document, s = d.createElement('script');
+            s.src = 'https://perfect-15.disqus.com/embed.js';
+            s.setAttribute('data-timestamp', +new Date());
+            (d.head || d.body).appendChild(s);
+        })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by
+            Disqus.</a></noscript>
+    </p>
+    <script id="dsq-count-scr" src="//perfect-15.disqus.com/count.js" async></script>
+    <p>
+        <a href="Policy.html">Privacy Policy</a>
+    </p>
+    <footer style="text-align: center; padding: 20px;"> <a
+            href="mailto:perfectsite@zohomail.com?subject=[문의] 웹사이트 관련&body=문의 내용을 여기에 작성해 주세요."
+            class="contact-button">이메일로 문의하기</a>
+    </footer>
+
+    <style>
+        .contact-button {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #007BFF;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            font-weight: bold;
+        }
+
+        .contact-button:hover {
+            background-color: #0056b3;
+        }
+    </style>
+    </p>
 </body>
 
 </html>
