--- a/1.html
+++ b/1.html
@@ -22,6 +22,59 @@
 
     스타일 시트 언어이므로 일반적인 프로그래밍 언어와는 다른 종류의 기능을 하지만 HTML과 연결시키면 다음 코드로 Hello World를 출력할 수 있기도 하다.
     <img src="img.jpg" width="100%">
+    <h2>관련 영상</h2>
+    <p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/7T7r_oSp0SE?si=9pkio1ttiq1atuk1"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </p>
+    <p>
+    <div id="disqus_thread"></div>
+    <script>
+        /**
+        *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+        *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+        /*
+        var disqus_config = function () {
+        this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+        this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+        };
+        */
+        (function () { // DON'T EDIT BELOW THIS LINE
+            var d = document, s = d.createElement('script');
+            s.src = 'https://perfect-15.disqus.com/embed.js';
+            s.setAttribute('data-timestamp', +new Date());
+            (d.head || d.body).appendChild(s);
+        })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by
+            Disqus.</a></noscript>
+    </p>
+    <script id="dsq-count-scr" src="//perfect-15.disqus.com/count.js" async></script>
+    <p>
+        <a href="Policy.html">Privacy Policy</a>
+    <footer style="text-align: center; padding: 20px;"> <a
+            href="mailto:perfectsite@zohomail.com?subject=[문의] 웹사이트 관련&body=문의 내용을 여기에 작성해 주세요."
+            class="contact-button">이메일로 문의하기</a>
+    </footer>
+
+    <style>
+        .contact-button {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #007BFF;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            font-weight: bold;
+        }
+
+        .contact-button:hover {
+            background-color: #0056b3;
+        }
+    </style>
+    </p>
 </body>
 
 </html>
