--- a/Policy.html
+++ b/Policy.html
@@ -2,6 +2,15 @@
 <html>
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-410RF58F1T"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-410RF58F1T');
+    </script>
     <title>Perfect - Policy</title>
     <meta charset="utf-8">
 </head>
